Fixed Alignment Issues with mentor

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -3,7 +3,12 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 400px;
+  height: 500px;
   background-color: #e66318;
-  background-image: url("../images/white-diamond-dark.png");
+  /* background-image: url("../images/white-diamond-dark.png"); */
+  padding-top: 160px;
+}
+
+.name h2{
+  margin-top: 0px
 }
